--- a/src/darkmode.css
+++ b/src/darkmode.css
@@ -3884,12 +3884,61 @@ padding-bottom: 70px;
   background-color: white;
   border: 1px solid white;
   border-radius: 20px;
-  padding: 10px 150px;
+  padding: 10px 250px;
   color: black;
 }
 
 .search-result-in .align-input .input svg {
   padding: 0px 10px;
+}
+
+/* number of search results */
+/* number of search results */
+/* number of search results */
+.number-of-search-results-in {
+  padding-left: 80px;
+}
+
+.number-of-search-results-in p {
+  color: #a6a6a6;
+}
+
+/* name-of-search-results */
+/* name-of-search-results */
+/* name-of-search-results */
+.name-of-search-results {
+  margin-left: 70px;
+  margin-right: 33%;
+}
+
+.name-of-search-results p {
+  background-color: #000;
+  border-radius: 7px;
+  color: yellow;
+  padding: 10px;
+  margin: 20px 0px;
+  width: 830px;
+}
+
+/* after-name-of-search-results */
+/* after-name-of-search-results */
+/* after-name-of-search-results */
+.after-name-of-search-results .a p {
+  background-color: white;
+  padding: 10px;
+  color: #444;
+  margin-top: -20px;
+  border-radius: 0px;
+  
+}
+
+/* image-title-results-in */
+/* image-title-results-in */
+/* image-title-results-in */
+.image-title-results-in img {
+  border-radius: 5px;
+  width: 100px;
+  height: auto;
 }
 
 /* vi - auth - logout.js */
@@ -4095,6 +4144,11 @@ padding-bottom: 70px;
   /* inizel */
   /* inizel */
   /* inizel */
+.name-of-search-results {
+  margin-left: 70px;
+  margin-right: 400px;
+}
+
   .more-language-in {
     margin-top: 30px;
     display: flex;
@@ -4146,6 +4200,20 @@ padding-bottom: 70px;
   /* inizel */
   /* inizel */
   /* inizel */
+  .name-of-search-results {
+    margin-left: 70px;
+    margin-right: 27%;
+  }
+
+  .name-of-search-results p {
+    background-color: #000;
+    border-radius: 7px;
+    color: yellow;
+    padding: 10px;
+    margin: 20px 0px;
+    width: 820px;
+  }
+
   .more-language-in {
     margin-top: 40px;
     display: flex;
@@ -4262,6 +4330,28 @@ padding-bottom: 70px;
    /* inizel */
   /* inizel */
   /* inizel */
+  .name-of-search-results {
+    margin-left: 70px;
+    margin-right: 27%;
+  }
+
+  .name-of-search-results p {
+    background-color: #000;
+    border-radius: 7px;
+    color: yellow;
+    padding: 10px;
+    margin: 20px 0px;
+    width: 650px;
+  }
+
+.search-result-in .align-input .input input[type="text"] {
+  background-color: white;
+  border: 1px solid white;
+  border-radius: 20px;
+  padding: 10px 160px;
+  color: black;
+}
+
   .more-language-in {
     margin-top: 70px;
     display: flex;
@@ -4444,6 +4534,20 @@ padding-bottom: 70px;
   /* inizel */
   /* inizel */
   /* inizel */
+
+  .name-of-search-results {
+    margin-left: 70px;
+    margin-right: 27%;
+  }
+
+  .name-of-search-results p {
+    background-color: #000;
+    border-radius: 7px;
+    color: yellow;
+    padding: 10px;
+    margin: 20px 0px;
+    width: 530px;
+  }
  
 .search-result-in .align-input .input input[type="text"] {
   background-color: white;
@@ -4804,6 +4908,20 @@ padding-bottom: 70px;
   /* inizel */
   /* inizel */
   /* inizel */
+  .name-of-search-results {
+    margin-left: 70px;
+    margin-right: 27%;
+  }
+
+  .name-of-search-results p {
+    background-color: #000;
+    border-radius: 7px;
+    color: yellow;
+    padding: 10px;
+    margin: 20px 0px;
+    width: 480px;
+  }
+
   .search-result-in .align-input .input input[type="text"] {
     background-color: white;
     border: 1px solid white;
@@ -4846,6 +4964,24 @@ padding-bottom: 70px;
   /* inizel */
   /* inizel */
   /* inizel */
+  .name-of-search-results {
+    margin-left: 50px;
+    margin-right: 27%;
+  }
+
+  .name-of-search-results p {
+    background-color: #000;
+    border-radius: 7px;
+    color: yellow;
+    padding: 10px;
+    margin: 20px 0px;
+    width: 450px;
+  }
+
+  .number-of-search-results-in {
+    padding-left: 60px;
+  }
+
   .search-result-in .align-logo-and-search-input .logo {
     padding-top: 0px;
     padding-bottom: 0px;
@@ -4888,6 +5024,24 @@ padding-bottom: 70px;
   /* inizel */
   /* inizel */
   /* inizel */
+  .name-of-search-results {
+    margin-left: 20px;
+    margin-right: 27%;
+  }
+
+  .name-of-search-results p {
+    background-color: #000;
+    border-radius: 7px;
+    color: yellow;
+    padding: 10px;
+    margin: 20px 0px;
+    width: 450px;
+  }
+
+  .number-of-search-results-in {
+    padding-left: 30px;
+  }
+
   .search-result-in .align-logo-and-search-input .logo {
     padding-top: 0px;
     padding-bottom: 0px;
@@ -4936,6 +5090,23 @@ padding-bottom: 70px;
 /* 520px */
 /* 520px */
 @media screen and (max-width: 520px) {
+
+  /* inizel */
+  /* inizel */
+  /* inizel */
+  .name-of-search-results {
+    margin-left: 20px;
+    margin-right: 27%;
+  }
+
+  .name-of-search-results p {
+    background-color: #000;
+    border-radius: 7px;
+    color: yellow;
+    padding: 10px;
+    margin: 20px 0px;
+    width: 435px;
+  }
   
   /* jamelfase */
   .geolocation .a {
@@ -4969,6 +5140,20 @@ padding-bottom: 70px;
   /* inizel */
    /* inizel */
   /* inizel */
+   .name-of-search-results {
+    margin-left: 20px;
+    margin-right: 27%;
+  }
+
+  .name-of-search-results p {
+    background-color: #000;
+    border-radius: 7px;
+    color: yellow;
+    padding: 10px;
+    margin: 20px 0px;
+    width: 410px;
+  }
+  
   .search-result-in .align-logo-and-search-input .logo {
     padding-top: 0px;
     padding-bottom: 0px;
@@ -5030,6 +5215,20 @@ padding-bottom: 70px;
     /* inizel */
     /* inizel */
   /* inizel */
+  .name-of-search-results {
+    margin-left: 20px;
+    margin-right: 30%;
+  }
+
+  .name-of-search-results p {
+    background-color: #000;
+    border-radius: 7px;
+    color: yellow;
+    padding: 10px;
+    margin: 20px 0px;
+    width: 120%;
+  }
+
   .search-result-in .align-logo-and-search-input {
     display: flex;
     align-items: center;
@@ -5119,11 +5318,24 @@ padding-bottom: 70px;
 
 
 /* 380px */
+/* 380px */
+/* 380px */
+/* 380px */
+/* 380px */
 @media screen and (max-width: 380px) {
   /* inizel */
-   /* inizel */
-    /* inizel */
-    .search-result-in .align-logo-and-search-input {
+  /* inizel */
+  /* inizel */
+   .name-of-search-results {
+    margin-left: 20px;
+    margin-right: 30%;
+  }
+
+  .number-of-search-results-in {
+      padding-left: 30px;
+    }
+  
+  .search-result-in .align-logo-and-search-input {
       display: flex;
       align-items: center;
       flex-direction: column;
