--- a/src/darkmode.css
+++ b/src/darkmode.css
@@ -3912,9 +3912,9 @@ padding-bottom: 70px;
 }
 
 .name-of-search-results p {
-  background-color: #000;
+  background: linear-gradient(to right, black, #ccc);
   border-radius: 7px;
-  color: yellow;
+  color: transparent;
   padding: 10px;
   margin: 20px 0px;
   width: 830px;
@@ -3924,21 +3924,71 @@ padding-bottom: 70px;
 /* after-name-of-search-results */
 /* after-name-of-search-results */
 .after-name-of-search-results .a p {
-  background-color: white;
+  background: white;
   padding: 10px;
   color: #444;
   margin-top: -20px;
   border-radius: 0px;
-  
 }
 
-/* image-title-results-in */
-/* image-title-results-in */
-/* image-title-results-in */
+/* home - image-title-results-in */
+/* home - image-title-results-in */
+/* home - image-title-results-in */
 .image-title-results-in img {
   border-radius: 5px;
   width: 100px;
   height: auto;
+  margin-top: -10px;
+}
+
+/* home - wiki-desc */
+/* home - wiki-desc */
+/* home - wiki-desc */
+.wiki-desc {
+  background-color: transparent;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: 70px;
+  width: 800px;
+  padding: 10px 10px;
+  border: 1px solid #ccc;
+  border-radius: 0px;
+}
+
+.wiki-desc .plain-button {
+  display: flex;
+  align-items: center;
+}
+
+.wiki-desc p {
+  color: #444;
+  font-size: 16px;
+}
+
+.wiki-desc .plain-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: transparent;
+  border-radius: 20px;
+  border: 1px solid #ccc;
+  font-size: 15px;
+  width: 120px;
+  padding-top: 7px;
+  padding-bottom: 7px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.wiki-desc .plain-button button {
+  color: blue;
+  cursor: pointer;
+  background-color: white;
+  border-radius: 20px;
+  border: none;
+  font-size: 15px;
+  padding-left: 5px;
+  padding-right: 5px;
 }
 
 /* vi - auth - logout.js */
@@ -4330,6 +4380,17 @@ padding-bottom: 70px;
    /* inizel */
   /* inizel */
   /* inizel */
+  .wiki-desc {
+    background-color: transparent;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 70px;
+    width: 630px;
+    padding: 10px 10px;
+    border: 1px solid #ccc;
+    border-radius: 0px;
+  }
+
   .name-of-search-results {
     margin-left: 70px;
     margin-right: 27%;
@@ -4534,6 +4595,17 @@ padding-bottom: 70px;
   /* inizel */
   /* inizel */
   /* inizel */
+  .wiki-desc {
+    background-color: transparent;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 70px;
+    width: 500px;
+    height: auto;
+    padding: 10px 10px;
+    border: 1px solid #ccc;
+    border-radius: 0px;
+  }
 
   .name-of-search-results {
     margin-left: 70px;
@@ -4908,6 +4980,18 @@ padding-bottom: 70px;
   /* inizel */
   /* inizel */
   /* inizel */
+  .wiki-desc {
+    background-color: transparent;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 70px;
+    width: 450px;
+    height: auto;
+    padding: 10px 10px;
+    border: 1px solid #ccc;
+    border-radius: 0px;
+  }
+
   .name-of-search-results {
     margin-left: 70px;
     margin-right: 27%;
@@ -4964,6 +5048,18 @@ padding-bottom: 70px;
   /* inizel */
   /* inizel */
   /* inizel */
+  .wiki-desc {
+    background-color: transparent;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 50px;
+    width: 430px;
+    height: auto;
+    padding: 10px 10px;
+    border: 1px solid #ccc;
+    border-radius: 0px;
+  }
+
   .name-of-search-results {
     margin-left: 50px;
     margin-right: 27%;
@@ -5024,6 +5120,18 @@ padding-bottom: 70px;
   /* inizel */
   /* inizel */
   /* inizel */
+  .wiki-desc {
+    background-color: transparent;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 20px;
+    width: 430px;
+    height: auto;
+    padding: 10px 10px;
+    border: 1px solid #ccc;
+    border-radius: 0px;
+  }
+
   .name-of-search-results {
     margin-left: 20px;
     margin-right: 27%;
@@ -5094,6 +5202,18 @@ padding-bottom: 70px;
   /* inizel */
   /* inizel */
   /* inizel */
+  .wiki-desc {
+    background-color: transparent;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 20px;
+    width: 415px;
+    height: auto;
+    padding: 10px 10px;
+    border: 1px solid #ccc;
+    border-radius: 0px;
+  }
+
   .name-of-search-results {
     margin-left: 20px;
     margin-right: 27%;
@@ -5140,6 +5260,18 @@ padding-bottom: 70px;
   /* inizel */
    /* inizel */
   /* inizel */
+  .wiki-desc {
+    background-color: transparent;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 20px;
+    width: 395px;
+    height: auto;
+    padding: 10px 10px;
+    border: 1px solid #ccc;
+    border-radius: 0px;
+  }
+
    .name-of-search-results {
     margin-left: 20px;
     margin-right: 27%;
@@ -5215,6 +5347,19 @@ padding-bottom: 70px;
     /* inizel */
     /* inizel */
   /* inizel */
+  .wiki-desc {
+    background-color: transparent;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 20px;
+    width: 75%;
+    /*  width: 240px; */
+    height: auto;
+    padding: 10px 10px;
+    border: 1px solid #ccc;
+    border-radius: 0px;
+  }
+
   .name-of-search-results {
     margin-left: 20px;
     margin-right: 30%;
