--- a/src/darkmode.css
+++ b/src/darkmode.css
@@ -3892,6 +3892,15 @@ padding-bottom: 70px;
   padding: 0px 10px;
 }
 
+.align-backbutton-and-filterbutton {
+  display: flex;
+  justify-content: space-between;
+}
+
+.align-backbutton-and-filterbutton .filterbutton {
+  margin-right: 7%;
+}
+
 /* number of search results */
 /* number of search results */
 /* number of search results */
@@ -3955,6 +3964,13 @@ padding-bottom: 70px;
   border-radius: 0px;
 }
 
+.wiki-desc .a {
+  display: flex;
+  align-items: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
 .wiki-desc .plain-button {
   display: flex;
   align-items: center;
@@ -3989,6 +4005,50 @@ padding-bottom: 70px;
   font-size: 15px;
   padding-left: 5px;
   padding-right: 5px;
+}
+
+/* in - home - hr-in-wiki-desc*/
+/* in - home - hr-in-wiki-desc*/
+/* in - home - hr-in-wiki-desc*/
+.hr-in-wiki-desc hr{
+  border: 1px solid #ccc;
+  margin: 10px;
+}
+
+/* in - home - others-links-in-wiki-desc */
+/* in - home - others-links-in-wiki-desc */
+/* in - home - others-links-in-wiki-desc */
+.others-links-in-wiki-desc .display-links {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.others-links-in-wiki-desc .display-links .links svg{
+  padding: 10px;
+  cursor: pointer;
+}
+
+/* in - home - link-of-website */
+/* in - home - link-of-website */
+/* in - home - link-of-website */
+.link-of-website .title {
+  font-size: 18px;
+  color: blue;
+  padding-top: 20px;
+  padding-right: 20px;
+  padding-left: 20px;
+}
+
+.link-of-website .link {
+  color: green;
+  padding-right: 20px;
+  padding-left: 20px;
+  padding-bottom: 10px;
+}
+
+.link-of-website .mini-desc {
+  padding-right: 20px;
+  padding-left: 20px;
 }
 
 /* vi - auth - logout.js */
