--- a/src/darkmode.css
+++ b/src/darkmode.css
@@ -68,49 +68,6 @@
   padding: 0px 10px;
 }
 
-/* all */
-/* all */
-/* all */
-/* all */
-/* all */
-/*
-.all {
-  font-family: Source Sans Pro, Helvetica, Arial, sans-serif;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  font-size: 17px;
-  padding: 20px;
-  margin-top: 50px;
-  color: #444;
-}
-
-.all p {
-  
-  font-size: 17px;
-  padding: 15px 0px;
-}
-
-.all button {
-  cursor: pointer;
-  font-family: Roboto, Arial, sans-serif;
-  background-color: red;
-  color: white;
-  border: 1px solid red;
-  border-radius: 20px;
-  padding: 10px 20px;
-  margin-top: 50px;
-  font-size: 15px;
-}
-*/
-
-/* translation.js */
-/* translation.js */
-/* translation.js */
-/* translation.js */
-/* translation.js */
-/* translation.js */
 .translation {
   padding: 30px 0px;
 }
@@ -361,9 +318,13 @@
 /* A */
 /* A */
 .home .a {
-  text-align: center;
+ text-align: center;
   padding: 200px 30px;
   font-size: 25px;
+}
+
+.home .a p {
+  padding: 5px 0px;
 }
 
 .home .a button {
@@ -1488,6 +1449,21 @@ footer {
 /* src - components - Signup.js */
 .signup-shrink {
   padding: 0px 15px;
+}
+
+.signup-shrink .b {
+  text-align: center;
+  padding-top: 80px;
+  padding-bottom: -100px;
+  color: #6f6f6f;
+  font-size: 13px;
+  width: 200px;
+}
+
+.signup-shrink .b .navlink {
+  color: #6f6f6f;
+  padding: 0px 0px;
+  text-decoration: underline;
 }
 
 /* src - components - login success.js */
@@ -3652,6 +3628,53 @@ padding-bottom: 70px;
   padding: 0px 3px;
 }
 
+/* al - navbar - navbar.js */
+/* al - navbar - navbar.js */
+/* al - navbar - navbar.js */
+/* al - navbar - navbar.js */
+.navbar-al {
+  background-color: #00cc00;
+  width: 100%;
+  height: 60px;
+}
+
+.navbar-al .left .navlink {
+  color: white;
+  text-decoration: none;
+  font-size: 25px;
+}
+
+.navbar-al .left p {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 20px;
+}
+
+.navbar-al .left {
+  float: left;
+}
+
+.navbar-al .right .navlink {
+  color: white;
+  text-decoration: none;
+  list-style: none;
+  padding-top: 17px;
+  padding-bottom: 10px;
+  padding-right: 30px;
+  padding-left: 10px;
+}
+
+.navbar-al .right {
+  float: right;
+  display: flex;
+  text-transform: uppercase;
+}
+
+/*
+.navbar-al .right .navlink:active {
+  color:red;
+}*/
+
 
 /* in - auth - logout.js */
 /* in - auth - logout.js */
@@ -4031,26 +4054,175 @@ padding-bottom: 70px;
 /* in - home - link-of-website */
 /* in - home - link-of-website */
 /* in - home - link-of-website */
+.link-of-website .title p {
+  cursor: pointer;
+}
+
+.link-of-website .link p {
+  cursor: pointer;
+}
+
 .link-of-website .title {
   font-size: 18px;
   color: blue;
-  padding-top: 20px;
-  padding-right: 20px;
-  padding-left: 20px;
+  width: 820px;
+  padding-left: 70px;
+  padding-bottom: 5px;
+}
+
+.link-of-website .title:hover {
+  text-decoration: underline;
+  color: blue;
 }
 
 .link-of-website .link {
-  color: green;
-  padding-right: 20px;
-  padding-left: 20px;
-  padding-bottom: 10px;
+  color: #444;
+  padding-top: 30px;
+  padding-left: 70px;
+  padding-bottom: 3px;
+  font-size: 14px;
 }
 
 .link-of-website .mini-desc {
-  padding-right: 20px;
-  padding-left: 20px;
+  width: 820px;
+  padding-left: 70px;
 }
 
+.link-of-website-btn {
+  display: flex;
+  margin-left: 70px;
+  margin-bottom: 50px;
+}
+
+.link-of-website-btn .active button {
+  color: blue;
+  cursor: pointer;
+  background-color: transparent;
+  border-radius: 5px;
+  border: 1px solid blue;
+  font-size: 15px;
+  padding: 4px 12px;
+  margin-right: 10px;
+  margin-top: 10px;
+}
+
+.link-of-website-btn .active button:hover {
+  color: white;
+  background-color: blue;
+}
+
+.link-of-website-btn  .a {
+  display: flex;
+  align-items: center;
+}
+
+.link-of-website-btn  .a button {
+  color: #444;
+  cursor: pointer;
+  background-color: transparent;
+  border: none;
+  padding: 0px 2px;
+  font-size: 15px;
+  margin-top: 10px;
+  text-decoration: underline;
+}
+
+.link-of-website-btn  .a button:hover {
+  color: blue;
+}
+
+.display-block-and-img {
+  display: flex;
+  align-items: center;
+}
+
+.display-block-and-img img {
+  width: 100px;
+  padding-top: 50px;
+  height: auto;
+  border-radius: 5px;
+}
+
+/* ja - auth - signup */
+/* ja - auth - signup */
+/* ja - auth - signup */
+.signup-ja .input {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.signup-ja .input input[type="text"] {
+  padding: 9px 46px;
+  border: 1px solid #fcff07;
+  border-radius: 20px;
+  text-align: center;
+}
+
+.signup-ja .input .a p {
+  margin-top: 40px;
+  padding-bottom: 3px;
+  text-align: center;
+}
+
+.signup-ja .input button {
+  color: black;
+  cursor: pointer;
+  background-color: #fcff07;
+  border: none;
+  padding: 12px 46px;
+  font-size: 15px;
+  margin-top: 20px;
+}
+
+.signup-ja .display {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-top: 30px;
+}
+
+.signup-ja .display .navlink {
+  color: blue;
+  padding: 0px 5px;
+  text-decoration: none;
+}
+
+.signup-ja .b {
+  text-align: center;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  color: #6f6f6f;
+  font-size: 12px;
+  width: 200px;
+}
+
+.signup-ja .b .navlink {
+  color: #6f6f6f;
+  padding: 0px 0px;
+}
+
+.signup-ja .input .before-title {
+  padding: 20px;
+  font-weight: bold;
+  font-size: 18px;
+}
+
+.signup-ja .input .title {
+  color: #fcff07;
+  font-weight: bold;
+  font-size: 20px;
+}
+
+.signup-ja .input button:hover {
+  border: 1px solid black;
+}
+
+.navlink-forgot-password-ja {
+  color: #444;
+  text-decoration: underline;
+}
+ 
 /* vi - auth - logout.js */
 /* vi - auth - logout.js */
 /* vi - auth - logout.js */
@@ -4440,6 +4612,35 @@ padding-bottom: 70px;
    /* inizel */
   /* inizel */
   /* inizel */
+  .link-of-website .title p {
+    cursor: pointer;
+  }
+  
+  .link-of-website .link p {
+    cursor: pointer;
+  }
+  
+  .link-of-website .title {
+    font-size: 18px;
+    color: blue;
+    width: 680px;
+    padding-left: 70px;
+    padding-bottom: 5px;
+  }
+  
+  .link-of-website .link {
+    color: #444;
+    padding-top: 30px;
+    padding-left: 70px;
+    padding-bottom: 3px;
+    font-size: 14px;
+  }
+  
+  .link-of-website .mini-desc {
+    width: 680px;
+    padding-left: 70px;
+  }
+
   .wiki-desc {
     background-color: transparent;
     margin-top: 10px;
@@ -4573,6 +4774,12 @@ padding-bottom: 70px;
   }
 
    /* inizel */
+   .display-block-and-img img {
+    width: 100px;
+    height: auto;
+    border-radius: 5px;
+  }
+  
    .home-in {
     margin-top: 20px;
   }  
@@ -4655,6 +4862,35 @@ padding-bottom: 70px;
   /* inizel */
   /* inizel */
   /* inizel */
+  .link-of-website .title p {
+    cursor: pointer;
+  }
+  
+  .link-of-website .link p {
+    cursor: pointer;
+  }
+  
+  .link-of-website .title {
+    font-size: 18px;
+    color: blue;
+    width: 520px;
+    padding-left: 70px;
+    padding-bottom: 5px;
+  }
+  
+  .link-of-website .link {
+    color: #444;
+    padding-top: 30px;
+    padding-left: 70px;
+    padding-bottom: 3px;
+    font-size: 14px;
+  }
+  
+  .link-of-website .mini-desc {
+    width: 520px;
+    padding-left: 70px;
+  }
+
   .wiki-desc {
     background-color: transparent;
     margin-top: 10px;
@@ -5108,6 +5344,35 @@ padding-bottom: 70px;
   /* inizel */
   /* inizel */
   /* inizel */
+  .link-of-website .title p {
+    cursor: pointer;
+  }
+  
+  .link-of-website .link p {
+    cursor: pointer;
+  }
+  
+  .link-of-website .title {
+    font-size: 18px;
+    color: blue;
+    width: 460px;
+    padding-left: 50px;
+    padding-bottom: 5px;
+  }
+  
+  .link-of-website .link {
+    color: #444;
+    padding-top: 30px;
+    padding-left: 50px;
+    padding-bottom: 3px;
+    font-size: 14px;
+  }
+  
+  .link-of-website .mini-desc {
+    width: 460px;
+    padding-left: 50px;
+  }
+
   .wiki-desc {
     background-color: transparent;
     margin-top: 10px;
@@ -5180,6 +5445,35 @@ padding-bottom: 70px;
   /* inizel */
   /* inizel */
   /* inizel */
+  .link-of-website .title p {
+    cursor: pointer;
+  }
+  
+  .link-of-website .link p {
+    cursor: pointer;
+  }
+  
+  .link-of-website .title {
+    font-size: 18px;
+    color: blue;
+    width: 460px;
+    padding-left: 20px;
+    padding-bottom: 5px;
+  }
+  
+  .link-of-website .link {
+    color: #444;
+    padding-top: 30px;
+    padding-left: 20px;
+    padding-bottom: 3px;
+    font-size: 14px;
+  }
+  
+  .link-of-website .mini-desc {
+    width: 460px;
+    padding-left: 20px;
+  }
+
   .wiki-desc {
     background-color: transparent;
     margin-top: 10px;
@@ -5262,6 +5556,35 @@ padding-bottom: 70px;
   /* inizel */
   /* inizel */
   /* inizel */
+  .link-of-website .title p {
+    cursor: pointer;
+  }
+  
+  .link-of-website .link p {
+    cursor: pointer;
+  }
+  
+  .link-of-website .title {
+    font-size: 18px;
+    color: blue;
+    width: 430px;
+    padding-left: 20px;
+    padding-bottom: 5px;
+  }
+  
+  .link-of-website .link {
+    color: #444;
+    padding-top: 30px;
+    padding-left: 20px;
+    padding-bottom: 3px;
+    font-size: 14px;
+  }
+  
+  .link-of-website .mini-desc {
+    width: 430px;
+    padding-left: 20px;
+  }
+
   .wiki-desc {
     background-color: transparent;
     margin-top: 10px;
@@ -5320,6 +5643,35 @@ padding-bottom: 70px;
   /* inizel */
    /* inizel */
   /* inizel */
+  .link-of-website .title p {
+    cursor: pointer;
+  }
+  
+  .link-of-website .link p {
+    cursor: pointer;
+  }
+  
+  .link-of-website .title {
+    font-size: 18px;
+    color: blue;
+    width: 420px;
+    padding-left: 20px;
+    padding-bottom: 5px;
+  }
+  
+  .link-of-website .link {
+    color: #444;
+    padding-top: 30px;
+    padding-left: 20px;
+    padding-bottom: 3px;
+    font-size: 14px;
+  }
+  
+  .link-of-website .mini-desc {
+    width: 420px;
+    padding-left: 20px;
+  }
+
   .wiki-desc {
     background-color: transparent;
     margin-top: 10px;
@@ -5407,13 +5759,41 @@ padding-bottom: 70px;
     /* inizel */
     /* inizel */
   /* inizel */
+  .link-of-website .title p {
+    cursor: pointer;
+  }
+  
+  .link-of-website .link p {
+    cursor: pointer;
+  }
+  
+  .link-of-website .title {
+    font-size: 18px;
+    color: blue;
+    width: 85%;
+    padding-left: 20px;
+    padding-bottom: 5px;
+  }
+  
+  .link-of-website .link {
+    color: #444;
+    padding-top: 30px;
+    padding-left: 20px;
+    padding-bottom: 3px;
+    font-size: 14px;
+  }
+  
+  .link-of-website .mini-desc {
+    width: 85%;
+    padding-left: 20px;
+  }
+
   .wiki-desc {
     background-color: transparent;
     margin-top: 10px;
     margin-bottom: 10px;
     margin-left: 20px;
     width: 75%;
-    /*  width: 240px; */
     height: auto;
     padding: 10px 10px;
     border: 1px solid #ccc;
@@ -5676,6 +6056,23 @@ padding-bottom: 70px;
   /* inizel */
    /* inizel */
     /* inizel */
+    .signup-ja .input input[type="text"] {
+      padding: 9px 20px;
+      border: 1px solid #fcff07;
+      border-radius: 20px;
+      text-align: center;
+    }
+
+    .signup-ja .input button {
+      color: black;
+      cursor: pointer;
+      background-color: #fcff07;
+      border: none;
+      padding: 12px 20px;
+      font-size: 15px;
+      margin-top: 20px;
+    }
+
     .search-result-in .align-logo-and-search-input {
       display: flex;
       align-items: center;
